api/s2n.h


#define S2N_SUCCESS 0
#define S2N_FAILURE -1
typedef enum {
    S2N_ERR_T_OK = 0,
    S2N_ERR_T_IO,
    S2N_ERR_T_CLOSED,
    S2N_ERR_T_BLOCKED,
    S2N_ERR_T_ALERT,
    S2N_ERR_T_PROTO,
    S2N_ERR_T_INTERNAL,
    S2N_ERR_T_USAGE
} s2n_error_type;
struct s2n_config;
struct s2n_connection;
S2N_API extern int s2n_config_set_session_cache_onoff(struct s2n_config *config, uint8_t enabled);
S2N_API extern int s2n_config_set_ticket_encrypt_decrypt_key_lifetime(struct s2n_config *config, uint64_t lifetime_in_secs);
S2N_API extern int s2n_config_set_ticket_decrypt_key_lifetime(struct s2n_config *config, uint64_t lifetime_in_secs);
S2N_API extern int s2n_config_add_ticket_crypto_key(struct s2n_config *config, const uint8_t *name, uint32_t name_len,
        uint8_t *key, uint32_t key_len, uint64_t intro_time_in_seconds_from_epoch);
S2N_API extern int s2n_config_require_ticket_forward_secrecy(struct s2n_config *config, bool enabled);
S2N_API extern int s2n_config_set_ctx(struct s2n_config *config, void *ctx);
S2N_API extern int s2n_config_get_ctx(struct s2n_config *config, void **ctx);
typedef enum {
    S2N_SERVER,
    S2N_CLIENT
} s2n_mode;
S2N_API extern struct s2n_connection *s2n_connection_new(s2n_mode mode);
S2N_API extern int s2n_connection_set_config(struct s2n_connection *conn, struct s2n_config *config);
S2N_API extern int s2n_connection_set_ctx(struct s2n_connection *conn, void *ctx);
S2N_API extern void *s2n_connection_get_ctx(struct s2n_connection *conn);
typedef int s2n_client_hello_fn(struct s2n_connection *conn, void *ctx);
typedef enum {
    S2N_CLIENT_HELLO_CB_BLOCKING,
    S2N_CLIENT_HELLO_CB_NONBLOCKING
} s2n_client_hello_cb_mode;
S2N_API extern int s2n_config_set_client_hello_cb(struct s2n_config *config, s2n_client_hello_fn client_hello_callback, void *ctx);
S2N_API extern int s2n_config_set_client_hello_cb_mode(struct s2n_config *config, s2n_client_hello_cb_mode cb_mode);
S2N_API extern int s2n_client_hello_cb_done(struct s2n_connection *conn);
S2N_API extern int s2n_connection_server_name_extension_used(struct s2n_connection *conn);
struct s2n_client_hello;
S2N_API extern struct s2n_client_hello *s2n_connection_get_client_hello(struct s2n_connection *conn);
S2N_API extern struct s2n_client_hello *s2n_client_hello_parse_message(const uint8_t *bytes, uint32_t size);
S2N_API extern int s2n_client_hello_free(struct s2n_client_hello **ch);
typedef enum {
    S2N_NOT_BLOCKED = 0,
    S2N_BLOCKED_ON_READ,
    S2N_BLOCKED_ON_WRITE,
    S2N_BLOCKED_ON_APPLICATION_INPUT,
    S2N_BLOCKED_ON_EARLY_DATA,
} s2n_blocked_status;
S2N_API extern int s2n_negotiate(struct s2n_connection *conn, s2n_blocked_status *blocked);